--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
   <div class="slider">
       <div class="list">
           <div class="item">
-              <img src="docs\images\carousel\nature1.jpeg" alt="image1">
+              <img src=".\docs\images\carousel\AgroFarmCover.jpg" alt="image1">
           </div>
           <div class="item">
               <img src="https://images.pexels.com/photos/1379636/pexels-photo-1379636.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1" alt="image2">
