--- a/index.html
+++ b/index.html
@@ -6,10 +6,9 @@
     <title>Agro Farm</title>
 
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css"  rel="stylesheet" />
-    <!--<link rel="stylesheet" href="css/index.css">-->
+    <link rel ="stylesheet" href="./css/index.css" />
 
-   
-<link rel ="stylesheet" href="./css/index.css" />
+    <link rel="icon" href="./docs/images/logo/logo_title.png" type="image/icon type">
   </head>
 
 <body>
@@ -19,7 +18,7 @@
 <nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
   <a href="" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <img src="https://flowbite.com/docs/images/logo.svg" class="h-8" >
+      <img src="./docs/images/logo/logo.png" class="h-8" >
       <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">AgroFarm</span>
   </a>
   <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
@@ -37,10 +36,10 @@
         <a href="#" class="block py-2 px-3 text-white bg-blue-700 rounded md:bg-transparent md:text-blue-700 md:p-0 md:dark:text-blue-500" aria-current="page">Home</a>
       </li>
       <li>
-        <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">About</a>
+        <a href="#product" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Products</a>
       </li>
       <li>
-        <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Services</a>
+        <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">About</a>
       </li>
       <li>
         <a href="#" class="block py-2 px-3 text-gray-900 rounded hover:bg-gray-100 md:hover:bg-transparent md:hover:text-blue-700 md:p-0 md:dark:hover:text-blue-500 dark:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent dark:border-gray-700">Contact</a>
@@ -139,7 +138,9 @@
   </div>
   <!--Carousel ending-->
 
-  <main class="main bd-grid">
+  <!----Products Starting-->
+  <div id="product">
+  <main class="main bd-grid" >
       <article class="card">
           <div class="card__img">
               <img src="https://png.pngtree.com/png-clipart/20230411/original/pngtree-duck-poultry-animal-transparent-on-white-background-png-image_9044367.png" alt="">
@@ -302,6 +303,7 @@
         </div>
     </article>
   </main>
+  </div>
 
 
   <!--footer start-->
