--- a/index.html
+++ b/index.html
@@ -4,9 +4,10 @@
 <head>
     <meta charset="UTF-8" />
     <title>Agro Farm</title>
-
+    <!---CSS Files-->
     <link href="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.css"  rel="stylesheet" />
     <link rel ="stylesheet" href="./css/index.css" />
+    <link rel ="stylesheet" href="./vendor/aos/aos.css">
 
     <link rel="icon" href="./docs/images/logo/logo_title.png" type="image/icon type">
   </head>
@@ -18,7 +19,7 @@
 <nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
   <a href="" class="flex items-center space-x-3 rtl:space-x-reverse">
-      <img src="./docs/images/logo/logo.png" class="h-8" >
+      <img src="./docs/images/logo/logo.png" class="h-12 w-12" >
       <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">AgroFarm</span>
   </a>
   <div class="flex md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
@@ -139,7 +140,7 @@
   <!--Carousel ending-->
 
   <!----Products Starting-->
-  <div id="product">
+  <div id="product" data-aos="zoom-in-right"  data-aos-duration="1500"  data-aos-easing="ease-in-sine">
   <main class="main bd-grid" >
       <article class="card">
           <div class="card__img">
@@ -309,9 +310,14 @@
   <!--footer start-->
  
 
-
+<!----JS files-->
   <script src="js/index.js"></script>
+  <script src="./vendor/aos/aos.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.1/dist/flowbite.min.js"></script>
+  
+  <script>
+    AOS.init(); // Initialize ANIMATION ON SCROLLING 
+  </script>
 
 </body>
 
