--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
   
 <!--navbar starting-->
-<nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600">
+<nav class="bg-white dark:bg-gray-900 fixed w-full z-20 top-0 start-0 border-b border-gray-200 dark:border-gray-600" >
   <div class="max-w-screen-xl flex flex-wrap items-center justify-between mx-auto p-4">
   <a href="" class="flex items-center space-x-3 rtl:space-x-reverse">
       <img src="./docs/images/logo/logo.png" class="h-12 w-12" >
@@ -261,8 +261,7 @@
          <!---   <a href="" class="card__icon" ><ion-icon name="heart-outline"></ion-icon></a> !-->
             
             <div>
-                <span class="card__preci card__preci--before">Vegetables</span>
-                <span class="card__preci card__preci--now">40</span>
+                <span class="card__preci card__preci--now">VEGETABLES</span>
             </div>
           <!---- <a href="" class="card__icon"><ion-icon name="cart-outline"></ion-icon></a> !-->
         </div>
@@ -309,7 +308,7 @@
 
 
 <!----About us-->
-<div id="aboutus" data-aos="fade-right"  data-aos-duration="1000"  data-aos-easing="ease-in-sine" class="p-10">
+<div id="aboutus" data-aos="fade-right"  data-aos-duration="1000"  data-aos-easing="ease-in-sine" class="p-10 ">
 <div class="relative isolate overflow-hidden bg-gray-900 py-24 sm:py-32">
     <img src="./docs/images/aboutus/aboutus.jpg" alt="" class="absolute inset-0 -z-10 h-full w-full object-cover object-right md:object-center blur-sm">
     <div class="hidden sm:absolute sm:-top-10 sm:right-1/2 sm:-z-10 sm:mr-10 sm:block sm:transform-gpu sm:blur-3xl" aria-hidden="true">
@@ -320,32 +319,31 @@
     </div>
     <div class="mx-auto max-w-7xl px-6 lg:px-8">
       <div class="mx-auto max-w-2xl lg:mx-0">
-        <h2 class="text-4xl font-bold tracking-tight text-white sm:text-6xl">Work with us</h2>
-        <p class="mt-6 text-lg leading-8 text-gray-300">Anim aute id magna aliqua ad ad non deserunt sunt. Qui irure qui lorem cupidatat commodo. Elit sunt amet fugiat veniam occaecat fugiat aliqua.</p>
+        <h2 class="text-4xl font-bold tracking-tight text-white sm:text-6xl">Who are we?</h2>
+        <p class="mt-6 text-lg leading-8 text-gray-300">Our goal as an organic vegetable farm is to deliver veggies free of chemicals and preservatives. Pet animals are another thing we deal with.</p>
       </div>
       <div class="mx-auto mt-10 max-w-2xl lg:mx-0 lg:max-w-none">
         <div class="grid grid-cols-1 gap-x-8 gap-y-6 text-base font-semibold leading-7 text-white sm:grid-cols-2 md:flex lg:gap-x-10">
-          <a href="#">Open roles <span aria-hidden="true">&rarr;</span></a>
-          <a href="#">Internship program <span aria-hidden="true">&rarr;</span></a>
-          <a href="#">Our values <span aria-hidden="true">&rarr;</span></a>
-          <a href="#">Meet our leadership <span aria-hidden="true">&rarr;</span></a>
+          <p href="#">Follow Us on <span aria-hidden="true">&rarr;</span></p>
+          <a href="#">Facebook </a>
+          <a href="#">Whatsapp </a>
         </div>
         <dl class="mt-16 grid grid-cols-1 gap-8 sm:mt-20 sm:grid-cols-2 lg:grid-cols-4">
           <div class="flex flex-col-reverse">
-            <dt class="text-base leading-7 text-gray-300">Offices worldwide</dt>
-            <dd class="text-2xl font-bold leading-9 tracking-tight text-white">12</dd>
+            <dt class="text-base leading-7 text-gray-300">mins Delivery time</dt>
+            <dd class="text-2xl font-bold leading-9 tracking-tight text-white">30</dd>
           </div>
           <div class="flex flex-col-reverse">
-            <dt class="text-base leading-7 text-gray-300">Full-time colleagues</dt>
+            <dt class="text-base leading-7 text-gray-300">Happy Clients</dt>
             <dd class="text-2xl font-bold leading-9 tracking-tight text-white">300+</dd>
           </div>
           <div class="flex flex-col-reverse">
-            <dt class="text-base leading-7 text-gray-300">Hours per week</dt>
-            <dd class="text-2xl font-bold leading-9 tracking-tight text-white">40</dd>
+            <dt class="text-base leading-7 text-gray-300">days per week available</dt>
+            <dd class="text-2xl font-bold leading-9 tracking-tight text-white">7</dd>
           </div>
           <div class="flex flex-col-reverse">
-            <dt class="text-base leading-7 text-gray-300">Paid time off</dt>
-            <dd class="text-2xl font-bold leading-9 tracking-tight text-white">Unlimited</dd>
+            <dt class="text-base leading-7 text-gray-300">Product Quality</dt>
+            <dd class="text-2xl font-bold leading-9 tracking-tight text-white">A+</dd>
           </div>
         </dl>
       </div>
@@ -360,14 +358,13 @@
 
 
 <footer class="bg-white rounded-lg shadow dark:bg-gray-900">
-    <div class="w-full max-w-screen-xl mx-auto p-4 md:py-8">
+    <div class="w-full max-w-screen-xl mx-auto  md:py-8">
         <div class="sm:flex sm:items-center sm:justify-between">
             <a href="https://flowbite.com/" class="flex items-center mb-4 sm:mb-0 space-x-3 rtl:space-x-reverse">
                 <img src="./docs/images/logo/logo.png" class="h-14 w-14" alt="Flowbite Logo" />
-                <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">Flowbite</span>
+                <span class="self-center text-2xl font-semibold whitespace-nowrap dark:text-white">AgroFarm</span>
             </a>
-        <hr class="my-6 border-gray-200 sm:mx-auto dark:border-gray-700 lg:my-8" />
-        <span class="block text-sm text-gray-500 sm:text-center dark:text-gray-400">© 2024 <a href="https://flowbite.com/" class="hover:underline">AgroFarm</a>. All Rights Reserved.</span>
+        <span class="block text-sm text-gray-500 sm:text-right dark:text-gray-400">© 2024 <a href="https://flowbite.com/" class="hover:underline">AgroFarm</a>. All Rights Reserved.</span>
     </div>
 </footer>
 
